--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ header {
     border-bottom: 1px solid #8080802a;
     background-color: #FFD325;
     box-shadow: 0px 3px 2px rgba(128, 128, 128, 0.432);
-    overflow-x: hidden;
 }
 
 .header-top {
@@ -87,6 +86,7 @@ nav input {
 
 main {
     display: flex;
+    width: 100%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -99,6 +99,7 @@ main {
     align-items: center;
     justify-content: space-around;
     max-width: 1200px;
+    width: 100%;
     padding: 70px;
     border-bottom: 1px solid rgba(128, 128, 128, 0.445);
 }
@@ -203,6 +204,7 @@ main {
     padding: 70px;
     margin-top: 40px;
     max-width: 1200px;
+    width: 100%;
     border-bottom: 1px solid #4b4b4b3f;
 }
 
@@ -238,6 +240,7 @@ main {
     padding: 70px;
     margin-top: 20px;
     max-width: 1200px;
+    width: 100%;
     border-bottom: 1px solid #4b4b4b3f;
 }
 
@@ -301,8 +304,10 @@ main {
 .contact-sect {
     display: flex;
     justify-content: space-around;
+    flex-wrap: wrap;
     align-items: center;
     max-width: 1200px;
+    width: 100%;
     margin-top: 40px;
     padding: 70px;
     gap: 40px;
